feat: Add basic color styles for game buttons

--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -4,3 +4,19 @@
     width: 100px;
     height: 100px;
 }
+
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: red;
+}
+
+.blue {
+    background-color: red;
+}
+
+.puple {
+    background-color: red;
+}
