Refactor: Rename .panel class to be more specific

--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -4,19 +4,19 @@
     width: 100px;
     height: 100px;
 }
-.panel {
+.bottom-right-panel {
     background-color: red;
     border-bottom-left-radius: 200px;
     width: 100px;
     height: 100px;
 }
-.panel {
+.bottom-right-panel {
     background-color: red;
     border-bottom-left-radius: 200px;
     width: 100px;
     height: 100px;
 }
-.panel {
+.bottom-left-panel {
     background-color: red;
     border-bottom-left-radius: 200px;
     width: 100px;
