Fix: Correct button colors in index.css

--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -27,11 +27,11 @@
     background-color: red;
 }
 .green {
-    background-color: red;
+    background-color: green;
 }
 .blue {
-    background-color: red;
+    background-color: blue;
 }
 .purple {
-    background-color: red;
+    background-color: purple;
 }
