--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -1,3 +1,9 @@
+.panel {
+    width: 100px;
+    height: 100px;
+    display in
+}
+
 .bottom-right-panel {
     background-color: red;
     border-bottom-right-radius: 200px;
