--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -6,19 +6,19 @@
 
 .bottom-right-panel {
     background-color: red;
-    border-bottom-right-radius: 100px;
+    border-bottom-right-radius: 100%;
 }
 .bottom-left-panel {
     background-color: green;
-    border-bottom-left-radius: 100px;
+    border-bottom-left-radius: 100%;
 }
 .top-right-panel {
     background-color: blue;
-    border-top-right-radius: 100px;
+    border-top-right-radius: 100%;
 }
 .top-left-panel {
     background-color: purple;
-    border-top-left-radius: 100px;
+    border-top-left-radius: 100%;
 }
 
 .red {
