--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -1,7 +1,12 @@
+body {
+    background-color: black;
+}
+
 .panel {
     width: 200px;
     height: 200px;
     display: inline-block;
+    text-align: center;
 }
 
 .bottom-right-panel {
