--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -28,6 +28,10 @@ body {
     border-top-left-radius: 100%;
 }
 
+.center {
+    
+}
+
 .red {
     background-color: red;
 }
@@ -40,3 +44,4 @@ body {
 .purple {
     background-color: purple;
 }
+
