feat: Style the center element as a gray circle

--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -29,7 +29,10 @@ body {
 }
 
 .center {
-    
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    background-color: gray;
 }
 
 .red {
