Fix: Position central dot correctly in button

--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -40,9 +40,10 @@ body {
 }
 
 .center {
+    display: inline-block;
     width: 100px;
     height: 100px;
     border-radius: 100%;
     background-color: gray;
-    position: absolute; /* 중앙 원을 큰 원 중앙에 겹치게 */
+    top: -200px;
 }
