--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -41,9 +41,11 @@ body {
 
 .center {
     display: inline-block;
+    position: absolute;
     width: 100px;
     height: 100px;
     border-radius: 100%;
     background-color: gray;
-    top: -200px;
+    top: 135px;
+
 }
