--- a/Dino_run/public/CSS/index.css
+++ b/Dino_run/public/CSS/index.css
@@ -8,3 +8,10 @@
     height: 200px;
     border: 1px solid black;
 }
+#character{
+    width: 20px;
+    height: 50px;
+    background-color: red;
+    position: relative;
+    top: 150px;
+}
