--- a/Dino_run/public/CSS/index.css
+++ b/Dino_run/public/CSS/index.css
@@ -15,3 +15,16 @@
     position: relative;
     top: 150px;
 }
+#block{
+    width: 20px;
+    height: 20px;
+    background-color: blue;
+    position: relative;
+    top: 130px;
+    left: 480px;
+    animation: block ls infinite;
+}
+@keyframes block{
+    0%{left:480px;}
+    100%{left:-40px;}
+}
