feat: Implement basic jumping animation for the dinosaur

--- a/Dino_run/public/CSS/index.css
+++ b/Dino_run/public/CSS/index.css
@@ -14,6 +14,7 @@
     background-color: red;
     position: relative;
     top: 150px;
+    animation: jumb 500ms infinite;
 }
 @keyframes jump{
     0%{top: 150px;}
