--- a/Dino_run/public/CSS/index.css
+++ b/Dino_run/public/CSS/index.css
@@ -14,8 +14,11 @@
     background-color: red;
     position: relative;
     top: 150px;
-    animation: jump 500ms infinite;
 }
+.animate{
+    animation: jump 500ms;
+}
+
 @keyframes jump{
     0%{top: 150px;}
     30%{top: 100px;}
