--- a/Dino_run/public/CSS/index.css
+++ b/Dino_run/public/CSS/index.css
@@ -1,40 +1,42 @@
-*{
-     padding: 0;
-     margin: 0;
-}
+*{ padding:0; margin:0; }
 
 #game{
-    width: 500px;
-    height: 200px;
-    border: 1px solid black;
+  width:500px; height:200px;
+  border:1px solid black;
+  position:relative; /* 충돌·레이아웃 안정화 */
+  overflow:hidden;   /* 블록이 밖으로 나가도 스크롤 막기 */
 }
+
 #character{
-    width: 20px;
-    height: 50px;
-    background-color: red;
-    position: relative;
-    top: 150px;
+  width:20px; height:50px;
+  background:#f33;
+  position:absolute;
+  left:50px;           /* 살짝 왼쪽에 고정 */
+  top:150px;           /* 바닥 높이 */
 }
-.animate{
-    animation: jump 500ms;
+
+/* 점프할 때 붙는 클래스 */
+#character.animate{
+  animation: jump 0.5s ease-out;
 }
 
 @keyframes jump{
-    0%{top: 150px;}
-    30%{top: 100px;}
-    70%{top: 100px;}
-    100%{top: 150px;}
+  0%   { top:150px; }
+  40%  { top:80px; }  /* 점프 최고점 */
+  60%  { top:80px; }
+  100% { top:150px; }
 }
+
 #block{
-    width: 20px;
-    height: 20px;
-    background-color: blue;
-    position: relative;
-    top: 130px;
-    left: 480px;
-    animation: block 1s infinite linear;
+  width:20px; height:20px;
+  background:#36f;
+  position:absolute;
+  top:180px;      /* 바닥 라인보다 살짝 위 */
+  left:480px;
+  animation: block 1s linear infinite; /* ← 1s(숫자1) */
 }
+
 @keyframes block{
-    0%{left:480px;}
-    100%{left:-40px;}
+  0%   { left:480px; }
+  100% { left:-40px; }
 }
