--- a/Dino_run/public/CSS/index.css
+++ b/Dino_run/public/CSS/index.css
@@ -1,4 +1,9 @@
-*{ padding:0; margin:0; }
+*{ padding:0; margin:0; box-sizing:border-box;}
+:root{
+    --game-w: 720px;
+    --game-h: 200px;
+    --floor-y: 160px;
+}
 
 #game{
   width:500px; height:200px;
